# DefElement

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  build.py  install_implementations.py  pyproject.toml  requirements.txt  setup.cfg  verification-history.json  verification.json  verify.py
.github/: set_symfem_branch.py
.github/scripts/: check_dependency_versions.py  (+5 more)
data/: contributors  editors  families
defelement/: caching.py  citations.py  code_examples.py  element.py  examples.py  families.py  info.py  languages.py  markup.py  plotting.py  polyset.py  rss.py  settings.py  symbols.py  tools.py  verification.py
elements/: alfeld-sorokina.def  argyris.def  arnold-boffi-falk.def  arnold-winther.def  bell.def  bernardi-raugel.def  bernstein.def  bogner-fox-schmitt.def  brezzi-douglas-duran-fortin.def  brezzi-douglas-fortin-marini.def  brezzi-douglas-marini.def  bubble-enriched-lagrange.def  bubble.def  buffa-christiansen.def  conforming-crouzeix-raviart.def  crouzeix-falk.def  crouzeix-raviart.def  direct-serendipity.def  discontinuous-lagrange.def  dpc.def  dual.def  enriched-galerkin.def  fortin-soulie.def  gauss-legendre.def  gopalakrishnan-lederer-schoberl.def  guzman-neilan.def  guzman-neilan2.def  hellan-hermann-johnson.def  hellan-herrmann-johnson.def  hermite.def  hsieh-clough-tocher.def  huang-zhang.def  johnson-mercier.def  kong-mulder-veldhuizen.def  lagrange.def  lederer-schoberl.def  lfeg.def  mardal-tai-winther.def  mini.def  morley-wang-xu.def  (+30 more)
files/: sty.css
pages/: 404.md  adding-an-implementation.md  barycentric-dual-grid.md  ciarlet.md  citing.md  contributors.md  de-rham.md  finite-elements.md  index.md  reference_numbering.md  style-guide.md  verification-and-jit.md
templates/: intro.html
test/: test_continuity.py  test_element_files.py  test_implementations.py  test_jit.py  test_pages.py  test_polynomial_sets.py  test_sequences.py  test_snippets.py  test_verification.py
(+27 files in other folders)
