[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "defelement"
version = "2025.12.0"
description = "a symbolic finite element definition library"
readme = "README.md"
requires-python = ">=3.10.0"
license = "MIT"
authors = [
    { name = "Matthew Scroggs", email = "defelement@mscroggs.co.uk" }
]
dependencies = [
    "cairosvg==2.8.2",
    "symfem==2025.12.0",
    "sympy==1.14.0",
    "PyGithub==2.8.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "website-build-tools==0.1.8"
]
packages = ["defelement", "defelement.implementations"]

[project.optional-dependencies]
style = ["ruff", "mypy", "pydocstyle"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
