[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "defelement"
description = "an encyclopedia of finite element definitions"
version = "2025.12"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    { name = "Matthew Scroggs", email = "defelement@mscroggs.co.uk" },
    { name = "other contributors to DefElement" }
]
dependencies = [
    "cairosvg==2.8.2",
    "symfem[optional]==2025.12.0",
    "numpy==2.4.0",
    "sympy==1.14.0",
    "PyGithub==2.8.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "website-build-tools==0.1.11"
]
packages = ["defelement", "defelement.implementations"]

[project.optional-dependencies]
style = ["ruff", "mypy", "pydocstyle"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
